fixed mobile booking bar alignment

--- a/src/styles/views/floating-bar.less
+++ b/src/styles/views/floating-bar.less
@@ -264,7 +264,7 @@ floating-bar {
                     text-align: left;
                     > div{
                       float: left;
-                      .adult {
+                      &.adult {
                         margin-right: 10px;
                       }
                     }
